--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,20 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
+        
+   
+        <!-- https://mvnrepository.com/artifact/io.dropwizard/dropwizard-core -->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version> 4.12</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
