--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>1.2.0</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/io.netty/netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
+        </dependency>
+        
 
         <dependency>
             <groupId>junit</groupId>
