Sketching out an some more config (will not parse as of yet, but eventually, maybe)

--- a/midibridge-config.yaml
+++ b/midibridge-config.yaml
@@ -16,6 +16,10 @@ firebaseDestinations:
     - id: testchannel
       path: testchannel
 
+# udpDestinations:
+#     - id:   udpMidi
+#       port: 6565
+
 
 midiRoutes:
     - source: testchannel
