--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,25 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
+
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>no.rmz.midibridge.service.MidiBridgeService</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+
         </plugins>
+
+
     </build>
     <dependencies>
 
@@ -27,22 +45,22 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
-        
-   
+
+
         <!-- https://mvnrepository.com/artifact/io.dropwizard/dropwizard-core -->
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
             <version>1.2.0</version>
         </dependency>
-        
+
         <!-- https://mvnrepository.com/artifact/io.netty/netty -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>5.0.0.Alpha1</version>
         </dependency>
-        
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -84,7 +102,6 @@
             <version>5.0.4</version>
         </dependency>
     </dependencies>
-
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
