Steps towards more uniform routing, still a bit of a mess.

--- a/midibridge-config.yaml
+++ b/midibridge-config.yaml
@@ -16,9 +16,9 @@ firebaseDestinations:
     - id: testchannel
       path: testchannel
 
-# udpDestinations:
-#     - id:   udpMidi
-#       port: 6565
+udpDestinations:
+    - id:   udpMidi
+      port: 6565
 
 
 midiRoutes:
