Redirect default midi messages to the builtin synth.  it's not very expressive, but it's low threshold for entry, so this si a proper default, a channel on Reeason (the old default) isn't.

--- a/midibridge-config.yaml
+++ b/midibridge-config.yaml
@@ -35,6 +35,8 @@ firebaseDestinations:
 midiDestinations:
    - id:  toReason
      midiDeviceName: toReason
+   - id: default
+     midiDeviceName: default
 
 
 ##
@@ -63,4 +65,4 @@ midiRoutes:
     - source: defaultHttp
       destination: toReason
     - source: udpMidi
-      destination: toReason
+      destination: default
