--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
                 </configuration>
             </plugin>
 
-
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -33,10 +32,29 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
-
+            
+             <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>no.rmz.midibridge.service.MidiBridgeService</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+            
         </plugins>
-
-
     </build>
     <dependencies>
 
